# Trabalho_PPP

./: .gitignore  CMakeLists.txt  Manual do Programador.docx  README.md  alunos.txt  aux.c  aux.h  auxiliar.c  auxiliar.h  despesas.txt  hold_tests.txt  main.c
headers/: alunos.c  alunos.h  auxiliar.c  auxiliar.h  principal.c  principal.h
